--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Список пород собак</title>
     <link rel="icon" href="/favicon.ico" />
-    <link rel="stylesheet" href="/style.css" />
-    <script type="module" src="/main.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
+    <script type="module" src="main.js" defer></script>
   </head>
   <body>
     <header class="header-container">
